--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 body {
-  background-image: url('/00507317-14044.jpg');
+  background-image: url('/picture/00507317-14044.jpg');
   background-size: 100%;
 }
 span {
