--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 body {
-  background: url(/picture/00507317-14044-2.jpg);
+  background: fuchsia;
   background-size: 100%;
 }
 span {
